--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,22 +5,20 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/userListScreen">
 
+    //start fragment
     <fragment
         android:id="@+id/userListScreen"
         android:name="com.example.emaapp.view.UserListFragment"
         android:label="@string/user_list_title">
         <action
-            android:id="@+id/action_userListScreen_to_userProfileActivity"
-            app:destination="@id/userProfileActivity" />
+            android:id="@+id/action_userListScreen_to_userProfileFragment"
+            app:destination="@id/userProfileFragment" />
     </fragment>
-    <activity
-        android:id="@+id/userProfileActivity"
-        android:name="com.example.emaapp.view.UserProfileActivity"
-        android:label="activity_user_profile"
-        tools:layout="@layout/fragment_user_profile" >
-        <argument
-            android:name="name"
-            app:argType="string" />
-    </activity>
+
+    //end fragment
+    <fragment
+        android:id="@+id/userProfileFragment"
+        android:name="com.example.emaapp.view.UserProfileFragment"
+        android:label="UserProfileFragment" />
 
 </navigation>
